@@ -1,1 +1,2 @@
 Add F1 Debug Window with live stats, actions, and variable tweaks
+Add data-driven debug window builder
